--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" id="metallicaDiv">Metallica</a>
                 </li>
+                <li class="nav-item">
+                    <button type="button" class="btn btn-outline-secondary" id="btnsongs" data-toggle="modal" data-target="#staticBackdrop">
+              Song List
+            </button>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
@@ -37,12 +42,23 @@
             </form>
         </div>
     </nav>
-
     <div class="container-fluid my-3">
         <div class="row mx-n1 mb-3 d-flex" id="main-content"></div>
     </div>
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-xs modal-sm modal-lg modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Songs List</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
