--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
               Song List
             </button>
                 </li>
+                <li class="nav-item ml-2">
+                    <button type="button" class="btn btn-outline-secondary" id="btnCountUnique">
+              Count Unique
+            </button>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
